--- a/styles/styles.css
+++ b/styles/styles.css
@@ -16,7 +16,9 @@ body {
   margin: 100px auto;
   background: white;
   border-radius: 11px;
-  box-shadow: 6px 6px 30px gold, -6px -6px 30px gold;
+  box-shadow: 6px 6px 30px hsla(45, 100%, 80%, 0.7), -6px -6px 30px hsla(45, 100%, 80%, 0.7);
+
+
 }
 
 .registro {
@@ -178,8 +180,8 @@ form option {
 
 /* boton envio */
 button {
-  width: 100%; /* Cambiado para ocupar todo el ancho disponible */
-  margin: 2px 0; /* Ajustado el margen vertical */
+  width: 250px;
+  margin: 2px;
   padding: 8px;
   background: rgb(226, 226, 226);
   outline: none;
